--- a/task-a/style.css
+++ b/task-a/style.css
@@ -1,3 +1,7 @@
+/*
+Author: Rebecka Skog
+Date: 18-09-2025
+*/
 body {
     background-color: beige;
     font-family: Arial, Helvetica, sans-serif;
