--- a/task-a/style.css
+++ b/task-a/style.css
@@ -6,6 +6,19 @@ body {
     background-color: beige;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 a {
     color: purple;
+}
+
+p {
+    font-size: large;
+    color: maroon;
+    font-weight: bold;
+}
+
+h1 {
+    color: darkgray;
+    font-size: x-large;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
